--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <h1>Etch A Sketch</h1>
+        <h1 id="title">Etch A Sketch</h1>
 
-        <div id="grid"></div>
+        <div id="gridContainer"></div>
 
         <script src="main.js"></script>
     </body>
