--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <body>
         <h1 id="title">Etch A Sketch</h1>
-
+        <div id="buttonContainer">
+            <button type="button" id="resetButton">Reset</button>
+        </div>
         <div id="gridContainer"></div>
 
         <script src="main.js"></script>
