--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 id="title">Etch A Sketch</h1>
         <div id="buttonContainer">
-            <button type="button" id="resetButton">Reset</button>
+            <button type="button" id="clearButton">Clear</button>
         </div>
         <div id="gridContainer"></div>
 
