--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1 id="title">Etch A Sketch</h1>
         <div id="buttonContainer">
             <button type="button" id="clearButton">Clear</button>
+            <button type="button" id="resetButton">Reset</button>
         </div>
         <div id="gridContainer"></div>
 
