--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <body>
         <h1 id="title">Etch A Sketch</h1>
-        <div id="buttonContainer">
-            <button type="button" id="clearButton">Clear</button>
-            <button type="button" id="resetButton">Reset</button>
+        <div id="main">
+            <div id="buttonContainer">
+                <button type="button" id="clearButton">Clear</button>
+                <button type="button" id="resetButton">Reset</button>
+            </div>
+            <div id="gridContainer"></div>
         </div>
-        <div id="gridContainer"></div>
 
         <script src="main.js"></script>
     </body>
