Created some new buttons. One will act as an eraser, and the second one will remove the lines in the grid.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             <div id="buttonContainer">
                 <button type="button" id="clearButton">Clear</button>
                 <button type="button" id="resetButton">Reset</button>
+                <button type="button" id="eraseButton">Eraser</button>
+                <button type="button" id="removeGridLines">Toggle Lines</button>
             </div>
             <div id="gridContainer"></div>
         </div>
