--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             <div id="buttonContainer">
                 <button type="button" id="clearButton">Clear</button>
                 <button type="button" id="resetButton">Reset</button>
+                <button type="button" id="blackColorButton">Black</button>
                 <button type="button" id="eraseButton">Eraser</button>
                 <button type="button" id="removeGridLines">Toggle Lines</button>
+                
             </div>
             <div id="gridContainer"></div>
         </div>
