Chnaged the name of the button removeGridLines to toggleGirdLines for easier understanding.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <button type="button" id="resetButton">Reset</button>
                 <button type="button" id="blackColorButton">Black</button>
                 <button type="button" id="eraseButton">Eraser</button>
-                <button type="button" id="removeGridLines">Toggle Lines</button>
+                <button type="button" id="toggleGridLines">Toggle Lines</button>
                 
             </div>
             <div id="gridContainer"></div>
